# AllWeb3Jobs

./: .gitignore  README.md  bots.js  package-lock.json  package.json  setup.sh  setupbot.sh  tsconfig.json
backend/: .env  Cargo.toml
backend/src/: bot.rs  bots.rs  handlers.rs  jobs.rs  main.rs  models.rs
components/: CryptoDashboard.tsx  JobCard.tsx  Layout.tsx  SearchBar.tsx  SimilarJobs.tsx
data/content/: btc-reached-80k-60eb6086.json  test-title-e9e9c758.json
data/jobs/: -1777144239679.json  briefcase-hiring-altcoins-trading-researcher-crypto-trading-firm-f7122248.json  briefcase-hiring-business-development-executive-sponsorships-crypto-education-media-brand-d0071d00.json  briefcase-hiring-business-development-executive-sponsorships-crypto-education-media-brand-e5d3b999.json  briefcase-hiring-business-development-manager-sales-manager-crypto-web3-company-b5088b56.json  briefcase-hiring-business-development-professional-futures-bd-ourbit-exchange-8942a2fe.json  briefcase-hiring-customer-support-agent-emcd-249df19b.json  briefcase-hiring-head-of-product-axiom-c4e3e121.json  briefcase-hiring-key-account-manager-company-dec294b4.json  briefcase-hiring-multiple-tech-roles-cloudtrains-global-46c3c01b.json  briefcase-hiring-security-engineer-mysten-labs-6f8005fb.json  briefcase-hiring-senior-infrastructure-engineer-chainalysis-b35823fb.json  briefcase-hiring-shared-ledger-engineer-mindwave-926fea6f.json  (+14 more)
frontend/: .env.local  package-lock.json  package.json  tailwind.config.ts
lib/: jobs.ts  similarity.ts  siteConfig.ts
pages/: index.tsx  sitemap.xml.tsx
(+25 files in other folders)
