[package]
name = "allweb3jobs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
reqwest = { version = "0.12", features = ["json"] }
teloxide = { version = "0.13", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"] }
once_cell = "1"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
anyhow = "1.0.102"
